# major_project

./: README.md  RED_LINE_DETECTION_DEBUG.md  pyproject.toml  requirements.txt  sound_check.py
src/drowsiness_detector/: __init__.py  alerts.py  app.py  carla_controller.py  config.py  detector.py  mediapipe_system.py  qt_dashboard.py
src/drowsiness_detector_carla.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_carla_controller.py  test_detector.py
