[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drowsiness-detector-carla"
version = "0.1.0"
description = "Drowsiness detection and CARLA safety controller scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "carla>=0.9.15",
  "PyQt5>=5.15",
  "pyqtgraph>=0.13",
  "shapely>=2.0",
  "networkx>=3.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
